feat: 支持 websocket 接口接收实时数据。

--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="">
   <head>
-      <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=wS6oFNUtxQkjV7NsMd5iyNn2ydw2XlmE"></script>
-      <script type="text/javascript" src="http://api.map.baidu.com/getscript?v=2.0&ak=wS6oFNUtxQkjV7NsMd5iyNn2ydw2XlmE"></script>
+      <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=8e0bc85c882941ece32fa6981ea6742e"></script>
+      <script type="text/javascript" src="http://api.map.baidu.com/getscript?v=2.0&ak=8e0bc85c882941ece32fa6981ea6742e"></script>
       <script src="http://mapv.baidu.com/build/mapv.min.js"></script>
       <script type="text/javascript" src="//apps.bdimg.com/libs/jquery/2.1.1/jquery.min.js"></script>
       <script type="text/javascript" src="https://api.map.baidu.com/library/DrawingManager/1.4/src/DrawingManager_min.js"></script>
-      <script src="../src/assets/js/hidpi-canvas.min.js" ></script>
+      <script type="module">
+        import hidpiCanvas from 'https://cdn.skypack.dev/hidpi-canvas';
+      </script>
       <link rel="stylesheet" href="https://api.map.baidu.com/library/DrawingManager/1.4/src/DrawingManager_min.css" />
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
